--- a/FRONTEND/src/Crud.css
+++ b/FRONTEND/src/Crud.css
@@ -49,7 +49,7 @@
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.isStudent input[type="checkbox"] {
+.isBudget input[type="checkbox"] {
   margin-top: 155px;
   margin-bottom: 100px;
   height: 30px;
@@ -61,7 +61,7 @@
   border-left-width: 5px;
 }
 
-.isStudent input[type="checkbox"] + label {
+.isBudget input[type="checkbox"] + label {
   margin-top: 155px;
   margin-bottom: 100px;
   margin-left: -80px;
@@ -107,7 +107,7 @@
 .divLN{
   position: absolute;
   top: 25%;
-  left: 29%;
+  left: 30%;
   transform: translate(-50%, -50%);
   font-size: 20px !important;
 }
@@ -115,7 +115,7 @@
 .divAge{
   position: absolute;
   top: 25%;
-  left: 48%;
+  left: 49%;
   transform: translate(-50%, -50%);
   font-size: 20px !important;
 }
